dnl Process this file with autoconf to produce a configure script.
AC_INIT()
AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_C_BIGENDIAN
AC_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_CHECK_TOOL(RANLIB, ranlib, :)
AC_CHECK_TOOL(AR, ar)

dnl libdwarf default-disabled shared
shrd=''
AC_ARG_ENABLE(shared,AC_HELP_STRING([--enable-shared],
                [build shared library libdwarf.so]))
AS_IF([ test "x$enable_shared" = "xyes"], [
   shrd='--enable-shared'])

dnl We always build a non-shared so libdwarf
dnl can use it itself as part of its build.
dnl hence no --disable-nonshared provided here.

chckres() {
if test $1 != 0
then
  echo "Configure Error exit:  $2"
  exit 2
fi
}

AC_CONFIG_SUBDIRS([libdwarf dwarfdump dwarfgen dwarfexample])

AC_OUTPUT(Makefile)
