
option('libelf',
  type : 'boolean',
  value : true,
  description : 'enable libelf support'
)

option('dwarfgen',
  type : 'boolean',
  value : false,
  description : 'enable dwarfgen compilation'
)

option('doc',
  type : 'boolean',
  value : false,
  description : 'build and install Doxygen documentation'
)
